# New-Vegas-Tick-Fix

./: CriticalSections.cpp  CriticalSections.h  FPSTimer.cpp  FPSTimer.h  Hooks.h  README.md  TickFix.cpp  direct3dhooks.cpp  direct3dhooks.h  exports.def  hooks.h  main.cpp  main.h
lib/: CMakeLists.txt
lib/nvse/: CMakeLists.txt
lib/nvse/nvse/: SafeWrite.h  prefix.h
nvse/: PluginAPI.h  nvse_version.h
nvse/nvse/: PluginAPI.h  SafeWrite.cpp  SafeWrite.h  Utilities.h  prefix.h
nvtf/: CMakeLists.txt  CMakeSettings.json  CriticalSections.cpp  CriticalSections.h  FPSTimer.cpp  FPSTimer.h  NVTF.sln  NVTF.vcxproj  NVTF.vcxproj.filters  README.md  direct3dhooks.cpp  direct3dhooks.h  exports.def  hooks.h  main.cpp  main.h
nvtf/internal/: D3DHooks.cpp  D3DHooks.hpp  FastExit.cpp  FastExit.hpp  GeometryPrecacheQueue.cpp  GeometryPrecacheQueue.hpp  HashTables.cpp  HashTables.hpp  INIUtils.cpp  INIUtils.hpp  MiscHooks.cpp  MiscHooks.hpp  ThreadingTweaks.cpp  ThreadingTweaks.hpp  TickFix.cpp  TickFix.hpp  utility.cpp  utility.h
nvtf/internal/Common/: CommonUtils.cpp  CommonUtils.hpp
nvtf/internal/Game/Bethesda/: BGSSaveLoadGame.cpp  BGSSaveLoadGame.hpp  BSCriticalSection.hpp  BSTimer.cpp  BSTimer.hpp  Interface.cpp  Interface.hpp  MemoryLevelManager.cpp  MemoryLevelManager.hpp  StartMenu.cpp  StartMenu.hpp  TESMain.cpp  TESMain.hpp  TimeGlobal.cpp  TimeGlobal.hpp  bhkWorld.cpp  bhkWorld.hpp
nvtf/internal/Game/Gamebryo/: NiCriticalSection.hpp  NiDX9Renderer.cpp  NiDX9Renderer.hpp  NiRefObject.hpp  NiRenderer.cpp  NiRenderer.hpp  NiSmartPointer.hpp
nvtf/modules/: CMakeLists.txt
nvtf/modules/common/: CMakeLists.txt
nvtf/modules/common/include/common/: common.hpp  settings.hpp  structs.hpp
nvtf/modules/common/src/common/: settings.cpp
nvtf/modules/criticalsections/: CMakeLists.txt
nvtf/modules/criticalsections/include/criticalsections/: criticalsections.hpp  hooks.hpp  settings.hpp  structs.hpp
nvtf/modules/criticalsections/src/criticalsections/: criticalsections.cpp  hooks.cpp  settings.cpp
nvtf/src/: main.cpp  main.h
nvtf/src/settings/: settings.h
shared/: Defines.hpp
shared/SafeWrite/: SafeWrite.cpp  SafeWrite.hpp
shared/Utils/: WaitLock.hpp
